# 12yd

./: .gitignore  .repomixignore  AGENTS.md  CONTEXT.md  README.md  app.py  progress.txt  pyproject.toml  ralph.sh  requirements.txt  test.ipynb  test.py
.github/workflows/: ralph.yml  scrape-and-predict.yml  scrape.yml
data/: empty_shotmap_documentation.md  matches.jsonl  player_history.jsonl  predictions.jsonl  url_rotation_wall.md  wc2026_roster.jsonl
docs/: PRD-v2.md  PRD-v3.md  PRD-v4.md  PRD-v5.md  PRD.md  fotmob.md  model-card-v3.md  model-card-v4.md  model-review.md
docs/adr/: 0001-hugging-face-for-persistence.md  0002-streamlit-cloud-for-hosting.md  0003-single-hf-repo-with-subpaths.md  0004-phase-3-data-source.md  0005-github-storage-and-architectural-pivot.md
docs/samples/: league_wc_2022_slim.json  league_wc_2026_slim.json  rsssf_penaltiestour.html
model/: README.md  lightgbm.pkl  metrics.json
notebooks/: feature_engineering.py  modelling.py
scripts/: __init__.py  build_training_table.py  evaluate_cv.py  fetch_2022_final.py  fetch_all_shootouts.py  fetch_initial_set_player_history.py  fetch_player_history.py  fetch_wc_2026_roster.py  predict.py  scraper.py  train_baseline.py  train_lightgbm.py
src/penalty_pred/: __init__.py  artifacts.py  client.py  config.py  coordinates.py  dashboard.py  evaluate.py  features.py  fotmob_parsing.py  initial_set.py  leagues.py  model.py  player_history.py  predict.py  rosters.py  rsssf.py  shootouts.py  tournaments.py  validate.py
src/twelveyards/: artifacts.py  client.py  config.py  coordinates.py  dashboard.py  evaluate.py  features.py  fotmob_parsing.py  initial_set.py  leagues.py  match_ref.py  model.py  pipeline.py  player_history.py  predict.py  rosters.py  rsssf.py  shootouts.py  tabpfn.py  tournaments.py
src/twelveyards/fotmob/: __init__.py  (+5 more)
tests/: __init__.py  _factories.py  conftest.py  test_app.py  test_artifacts.py  test_client.py  test_config.py  test_coordinates.py  test_dashboard.py  test_deployment.py  test_evaluate.py  test_features.py  test_fotmob.py  test_fotmob_parsing.py  test_initial_set.py  test_leagues.py  test_lightgbm.py  test_match_ref.py  test_model.py  test_pipeline.py  test_player_history.py  test_predict.py  test_rosters.py  test_rsssf.py  test_shootouts_2022_final.py  test_shootouts_pipeline.py  test_tabpfn.py  test_tournaments.py  test_validate.py
(+7 files in other folders)
